public/css/page.css
:root {
    --shadow: 0 0 1vw rgba(0, 0, 0, 0.4);
    --page1-offset: 0;
    --page2-offset: 100vw;
    --transition-amount: 0s;
}

body {
    font: 400 20px/1.8 "Lato", sans-serif;
    margin: 0;
    overflow-x: hidden;
}

#page1, #page2 {
    transition: left var(--transition-amount) ease;
    overflow-x: hidden;
}

#page1 {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    padding: 0;
    margin: 0;
}

#page2 {
    position: absolute;
    top: 0;
    left: var(--page2-offset);
    width: 100vw;
    bottom: 0;
    padding: 0;
    margin: 0;
    overflow-y: hidden;
}

.parallax {
    position: relative;
    height: 100%;
    background-attachment: fixed;
    background-repeat: no-repeat;
    background-size: cover;
    transition: left 1s ease;
}

#page1 .parallax {
    background-position: center;
}

#page2 .parallax {
    background-position: center;
}

.pagetitle {
    position: absolute;
    top: 30%;
    font-size: max(20px, 2.5vw);
    width: 100%;
    text-align: center;
    white-space: nowrap;
    color: #ffffff;
    text-shadow: var(--shadow);
    transition: left 1s ease;
}

.caption {
    position: absolute;
    top: 30%;
    font-size: max(15px, 2vw);
    width: 100%;
    text-align: center;
    white-space: nowrap;
    color: #ffffff;
    text-shadow: var(--shadow);
    transition: left 1s ease;
}

#page1 .pagetitle {
    left: var(--page1-offset);
}

.downarrow {
    position: absolute;
    display: flex;
    width: 100vw;
    justify-content: center;
    bottom: 5vh;
    text-shadow: var(--shadow);
    transition: bottom 1.25s ease-in-out, left 1s ease;
}

#page1 .downarrow {
    left: var(--page1-offset);
}

.downarrow .icon {
    font-size: max(40px, 5vw);
}

.mobile {
    display: none;
}


@media only screen and (max-width: 1024px) {
    .mobile {display: block;}
    .desktop {display: none;}
}

@media only screen and (max-device-width: 1024px) {
    .parallax {
        background-attachment: scroll;
    }
}

.right {
    display: inline-flex;
    position: fixed;
    right: 30px;
    top: 2em;
    z-index: 2;
}

.right a {
    padding: 0;
    color: white;
    text-shadow: var(--shadow);
    cursor: pointer;
}

.right a:hover {
    color: darkgrey;
}

.content {
    position: relative;
    background-color: #ffffff;
    padding: 20px;
    top: 0;
    transition: 1s ease;
}

#page1 .content {
    left: var(--page1-offset);
}

.content img {
    display: block;
    margin-left: auto;
    margin-top: 20px;
    margin-right: auto;
    max-width: 350px;
    border-radius: 20px;
}

.content h2 {
    letter-spacing: 5px;
    text-transform: uppercase;
    text-align: center;
    font: max(25px, 2vw) "Lato", sans-serif;
    color: #111;
}

.content p {
    color: #777;
    padding: 10px 5vw;
    font: 400 max(20px, 1.5vw)/1.8 "Lato", sans-serif;
    text-align: left;
}

.content p a {
    display: inline-block;
    position: relative;
    text-decoration: none;
    color: #585858;
}

.content p a:after {
    content: '';
    position: absolute;
    width: 100%;
    transform: scaleX(0);
    height: 2px;
    bottom: 7px;
    left: 0;
    background-color: #585858;
    transform-origin: top;
    transition: transform 0.25s ease-out;
}

.content p a:hover:after {
    transform: scaleX(1);
    transform-origin: top;
}

.icon {
    display: inline-block;
    text-align: center;
    border-radius: 10px;
    font-size: 30px;
    height: 1.25em;
    width: 1.5em;
    padding-top: 0.25em;
    transition: 0.4s;
}

.wrapper {
    position: fixed;
    top: 0;
    overflow: hidden;
    width: 100%;
    height: 100%;
    text-align: left;
    z-index: 3;
}

.menu {
    position: fixed;
    top: 0;
    left: -270px;
    width: 180px;
    height: 100%;
    padding-left: 40px;
    padding-right: 40px;
    padding-top: 100px;
    transition: 0.4s;
    background-color: rgba(0, 0, 0, 0.7);
    color: white;
    z-index: 2;
}

.icons {
    width: 50px;
    transition: 0.4s;
    cursor: pointer;
}

.names {
    width: 130px;
    margin-left: 10px;
}

.icons:hover {
    width: 40px;
    padding-left: 10px;
}

.menu h2 {
    font: bold 20px "Lato", sans-serif;
}

.menu h1 {
    font: bold 25px "Lato", sans-serif;
    margin-bottom: 5px;
    margin-top: 5px;
}

.menu a {
    text-decoration: none;
}

.nav {
    position: fixed;
    top: 0;
    width: 50px;
    display: flex;
    margin: 2em 0 0 2em;
    cursor: pointer;
    z-index: 3;
    transition: 0.4s;
}

.nav div {
    height: 6px;
    background-color: white;
    margin: 6px;
    border-radius: 25px;
    transition: 0.3s;
    box-shadow: var(--shadow);
}

.one {
    transform-origin: top left;
    width: 50px;
}

.two {
    width: 40px;
}

.three {
    transform-origin: top left;
    width: 45px;
}

